--- a/frontend/admin/event-report.html
+++ b/frontend/admin/event-report.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event Report | Together Culture Admin</title>
     <link rel="stylesheet" href="/css/admin.css" />
     <style>
@@ -19,7 +19,7 @@
         background: white;
         padding: 20px;
         border-radius: 10px;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       }
       h1 {
         text-align: center;
@@ -34,7 +34,8 @@
         border-collapse: collapse;
         margin-top: 20px;
       }
-      th, td {
+      th,
+      td {
         padding: 10px;
         border: 1px solid #ccc;
         text-align: left;
@@ -77,49 +78,49 @@
           <!-- Attendee rows will be inserted here dynamically -->
         </tbody>
       </table>
-      <a href="/non-members/events.html" class="back-btn">Back to Events</a>
+      <a href="./event.html" class="back-btn">Back to Events</a>
     </div>
 
     <script>
       // Retrieve the eventId from the URL query string
-      const urlParams = new URLSearchParams(window.location.search);
-      const eventId = urlParams.get("eventId");
+      const urlParams = new URLSearchParams(window.location.search)
+      const eventId = urlParams.get('eventId')
 
       if (!eventId) {
-        document.body.innerHTML = "<p>No event specified.</p>";
+        document.body.innerHTML = '<p>No event specified.</p>'
       } else {
-        window.addEventListener("DOMContentLoaded", async () => {
+        window.addEventListener('DOMContentLoaded', async () => {
           try {
             // Fetch attendee details for the given event
-            const response = await fetch(`/events/${eventId}/attendees`);
-            if (!response.ok) throw new Error("Failed to fetch attendees");
-            const attendees = await response.json();
-            
+            const response = await fetch(`/events/${eventId}/attendees`)
+            if (!response.ok) throw new Error('Failed to fetch attendees')
+            const attendees = await response.json()
+
             // Optionally, you can also fetch event details to display at the top
             // const eventResponse = await fetch(`/events/${eventId}`);
             // const eventDetails = await eventResponse.json();
             // document.getElementById("event-info").innerText = `Event: ${eventDetails.title} on ${eventDetails.event_date}`;
 
             // For now, we simply display the event ID:
-            document.getElementById("event-info").innerText = `Attendees for Event ID: ${eventId}`;
+            document.getElementById('event-info').innerText = `Attendees for Event ID: ${eventId}`
 
             // Insert attendees into table
-            const tbody = document.getElementById("attendeesTableBody");
-            tbody.innerHTML = "";
-            attendees.forEach(att => {
-              const row = document.createElement("tr");
+            const tbody = document.getElementById('attendeesTableBody')
+            tbody.innerHTML = ''
+            attendees.forEach((att) => {
+              const row = document.createElement('tr')
               row.innerHTML = `
                 <td>${att.UserName}</td>
                 <td>${att.userEmail}</td>
                 <td>${att.UserPhone}</td>
-              `;
-              tbody.appendChild(row);
-            });
+              `
+              tbody.appendChild(row)
+            })
           } catch (error) {
-            console.error("Error fetching event report:", error);
-            document.body.innerHTML = "<p>Error loading event report.</p>";
+            console.error('Error fetching event report:', error)
+            document.body.innerHTML = '<p>Error loading event report.</p>'
           }
-        });
+        })
       }
     </script>
   </body>
