--- a/frontend/admin/event.html
+++ b/frontend/admin/event.html
@@ -12,25 +12,28 @@
     <nav class="navbar">
       <header class="nav-header">
         <div class="nav-image">
-          <img src="/frontend/images/TC_Logos-01.png" alt="Together Culture CAMBRIDGE" />
+          <img src="/images/TC_Logos-01.png" alt="Together Culture Cambridge Logo" />
         </div>
       </header>
       <div class="nav-links">
         <ul>
           <li><a href="#">About</a></li>
           <li><a href="./member.html">Memberships</a></li>
+          <li><a href="./event.html">Events</a></li>
           <li><a href="/frontend/non members/contact-support.html">Contact</a></li>
         </ul>
       </div>
       <div class="usr-panel">
-        <button href="#">Logout</button>
-        <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon" />
+        <button class="signup-btn" id="logoutBtn">Logout</button>
+        <a id="userIconLink">
+          <img src="/images/GuestIcon.svg" alt="user-profile-icon" />
+        </a>
       </div>
     </nav>
 
     <main>
       <div class="admin-container">
-        <h2 style="margin-top: 90px">Event Administration</h2>
+        <h2 style="margin-top: 32px">Event Administration</h2>
 
         <div class="member-actions">
           <input type="text" class="input-text" placeholder="Search Event..." style="width: 30%" id="searchField" />
@@ -225,7 +228,7 @@
           </div>
 
           <div class="f-logo">
-            <img src="/frontend/images/PLACEHOLDER.svg" />
+            <img src="/images/PLACEHOLDER.svg" />
           </div>
         </div>
         <hr />
@@ -242,6 +245,16 @@
     </footer>
 
     <script>
+      const backendURL = window.location.port === '5000' ? '' : 'http://127.0.0.1:5000'
+      const userRole = localStorage.getItem('userRole')
+      const isLoggedIn = localStorage.getItem('loggedIn') === 'true'
+      if (isLoggedIn && userRole === 'admin') {
+        // User is logged in and is an admin, do nothing
+      } else {
+        // User is not logged in or not an admin, redirect to login page
+        window.location.href = '/non members/registration.html?tab=login'
+      }
+
       var columns = {
         title: 'Title',
         image_url: 'Image',
@@ -249,6 +262,7 @@
         end_date: 'End Date',
         start_time: 'Start Time',
         end_time: 'End Time',
+        report: 'Report',
         detail: 'Detail',
         delete: 'Delete'
       }
@@ -258,7 +272,12 @@
         rowsPerPage: 5,
         pagination: true,
         formatCell: function (row, key) {
-          if (key === 'image_url') return $('<img></img>').attr('src', `http://localhost:5000/uploads/${row[key]}`).attr('style', 'width: 80px')
+          if (key === 'image_url') return $('<img></img>').attr('src', `${backendURL}/uploads/${row[key]}`).attr('style', 'width: 80px')
+          if (key === 'report')
+            return $('<button></button>')
+              .attr('onclick', "window.location.href = 'event-report.html?eventId=" + row.event_id + "'")
+              .addClass('btn')
+              .text('Report')
           if (key === 'detail')
             return $('<button></button>')
               .attr('onclick', "window.location.href = 'event-detail.html?eventId=" + row.event_id + "'")
@@ -274,9 +293,9 @@
       })
 
       function setData() {
-        $.get(`http://localhost:5000/events`, function (data) {
+        $.get(`${backendURL}/events`, function (data) {
           table.setData(
-            data.events.map((a) => ({ detail: 'Detail', delete: 'Delete', ...a })),
+            data.map((a) => ({ report: 'Report', detail: 'Detail', delete: 'Delete', ...a })),
             columns
           )
         })
@@ -287,8 +306,9 @@
       $('#add-event-form').submit(function (e) {
         e.preventDefault()
         var formData = new FormData(this) // Create FormData object
+        formData.append('user_id', localStorage.getItem('userId')) // Append user_id to the FormData object
         $.ajax({
-          url: 'http://localhost:5000/events', // The URL where you want to send the POST request
+          url: `${backendURL}/events`, // The URL where you want to send the POST request
           type: 'POST',
           data: formData,
           processData: false, // Prevent jQuery from processing the data
@@ -306,7 +326,7 @@
       function deleteEvent(eventId) {
         if (confirm('Are you sure you want to delete this item?')) {
           $.ajax({
-            url: 'http://localhost:5000/events/' + eventId,
+            url: `${backendURL}/events/` + eventId,
             type: 'DELETE',
             success: function (response) {
               alert('Event deleted successfully!')
@@ -318,6 +338,26 @@
           })
         }
       }
+
+      logoutBtn.addEventListener('click', async () => {
+        try {
+          const response = await fetch(`${backendURL}/logout`, {
+            method: 'POST',
+            credentials: 'include' // Ensures session cookie is sent
+          })
+          if (response.ok) {
+            localStorage.removeItem('loggedIn')
+            localStorage.removeItem('userId')
+            localStorage.removeItem('userRole')
+            // Optionally redirect or reload
+            window.location.href = '/non members/registration.html?tab=login'
+          } else {
+            alert('Logout failed.')
+          }
+        } catch (error) {
+          console.error('Error logging out:', error)
+        }
+      })
     </script>
   </body>
 </html>
