--- a/frontend/non members/community-membership.html
+++ b/frontend/non members/community-membership.html
@@ -105,7 +105,7 @@
         pointer-events: auto;
         transform: translateY(0);
       }
-      /* ========== MAIN CONTENT: CREATIVE WORKSPACE MEMBERSHIP ========== */
+      /* MAIN CONTENT: CREATIVE WORKSPACE MEMBERSHIP  */
       .membership-main {
         margin-top: 80px;
         padding: 2rem;
