--- a/frontend/non members/creative-workspace-membership.html
+++ b/frontend/non members/creative-workspace-membership.html
@@ -7,14 +7,14 @@
     <!-- Link to global CSS (served from root) -->
     <link rel="stylesheet" href="/css/styles.css" />
     <style>
-      /* ========== RESET & GLOBAL ========== */
+      
       * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
         font-family: Arial, sans-serif;
       }
-      /* ========== HEADER (Unified Dropdown Header) ========== */
+      /*  HEADER Style */
       .navbar {
         background-color: #fe1e3c;
         position: fixed;
@@ -106,7 +106,7 @@
         transform: translateY(0);
       }
 
-      /* ========== MAIN CONTENT: CREATIVE WORKSPACE MEMBERSHIP ========== */
+      /* MAIN CONTENT: CREATIVE WORKSPACE MEMBERSHIP  */
       .membership-main {
         margin-top: 80px;
         padding: 2rem;
@@ -219,7 +219,7 @@
         background-color: #555;
       }
 
-      /* ========== FOOTER ========== */
+      /*  FOOTER  */
       footer {
         background-color: #0f0f0f;
         color: whitesmoke;
@@ -270,7 +270,7 @@
         height: auto;
       }
 
-      /* ========== RESPONSIVE ========== */
+      /*  RESPONSIVE  */
       @media (max-width: 1024px) {
         .membership-layout {
           flex-direction: column;
