--- a/frontend/non members/key-access-membership.html
+++ b/frontend/non members/key-access-membership.html
@@ -108,7 +108,7 @@
       
       /* ========== MAIN CONTENT: KEY ACCESS MEMBERSHIP BODY ========== */
       .membership-main {
-        margin-top: 80px; /* offset for fixed header */
+        margin-top: 80px; 
         padding: 2rem;
         background: #fff;
         display: flex;
@@ -384,7 +384,7 @@
         // Check if user is logged in
         const isLoggedIn = localStorage.getItem("loggedIn") === "true";
 
-        // Update UI based on login status:
+        // Updates UI based on login status:
         if (isLoggedIn) {
           // Hide "Join Now" button
           joinNowBtn.style.display = "none";
