holy mother of ********************* a whole lot of debugging. currently users can login and data will display and they can fully edit their info. now need to check mergine with teammates updates

--- a/frontend/Members/UserDashboard.html
+++ b/frontend/Members/UserDashboard.html
@@ -316,10 +316,12 @@
           <div class="title-overlay">Chat</div>
         </a>
         <!-- Settings Section -->
-        <div class="settings">
+        <!--<div class="settings">-->
+          <a href = "Settings.html" class = "content-card">
           <img src="UserDashPhotos/settingsIcon.jpg" alt="Settings" width="80">
           <h3>Settings</h3>
-        </div>
+          </a>
+       <!-- </div>-->
       </div>
     </div>
 
