--- a/frontend/non members/member application.html
+++ b/frontend/non members/member application.html
@@ -448,7 +448,7 @@
           const data = await response.text();
           if (response.ok) {
             alert("Application submitted successfully!");
-            // Redirect after submission; adjust as needed
+            // Redirect after submission; 
             window.location.href = "/index.html";
           } else if (response.status === 409) {
             // If the server returns a conflict status, it indicates the user already has an account
