--- a/frontend/non members/registration.html
+++ b/frontend/non members/registration.html
@@ -369,7 +369,7 @@
         showSignUp();
       }
 
-      //  SESSION MANAGEMENT (FRONT-END EXAMPLE) 
+      //  SESSION MANAGEMENT 
 
       const backendURL = window.location.port === '5000' ? '' : 'http://127.0.0.1:5000';
       const logoutBtn = document.getElementById("logoutBtn");
