added prettier alerts, made headers identical in logged in. most features are complete.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,3 +1,5 @@
+<!-- TODO add the responsive header for the index so when a user is logged in they can go to the home page with the same header-->
+ <!-- TODO Add logo and filler welcome stuff-->
 <!DOCTYPE html>
 <html lang="en" class="light">
   <head>
