--- a/frontend/non members/registration.html
+++ b/frontend/non members/registration.html
@@ -469,13 +469,8 @@
               window.location.href = "/admin/member.html";
             } else {
               localStorage.setItem("userRole", "user");
-              alert("Login successful!");  //TODO sweet alert?
-              /*  Swal.fire({
-                    icon: 'success',
-                    title: 'Login Successful',
-                    timer: 3000,
-                    showConfirmButton: false
-                  }); */
+              alert("Login successful!");  
+              
               window.location.href = "/Members/UserDashboard.html";
             }
           } else {
